--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Viral Test Lab - 재미있는 심리테스트 모음</title>
+    <title>재미있는 심리테스트 모음</title>
     <style>
         :root {
             --primary: #6C5CE7;
@@ -139,7 +139,7 @@
 <body>
     <div class="mobile-container">
         <header>
-            <h1>나의 숨겨진 본성을 찾아보세요</h1>
+            <h4>나의 숨겨진 본성을 찾아보세요</h1>
         </header>
 
         <main>
