--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Yangbam Lab - 재미와 유틸리티의 모든 것</title>
+    <title>테스트와 유틸리티의 모든 것</title>
     <meta name="description" content="심리테스트, 계산기, IT 변환기 등 유용한 도구와 재미있는 콘텐츠를 제공하는 Yangbam Lab입니다.">
     <meta name="keywords" content="심리테스트, 계산기, IT도구, 무료웹툴, Yangbam Lab">
     <meta name="author" content="Yangbam Lab">
     <meta property="og:type" content="website">
-    <meta property="og:title" content="Yangbam Lab - 재미와 유틸리티의 모든 것">
+    <meta property="og:title" content="테스트와 유틸리티의 모든 것">
     <meta property="og:description" content="심리테스트부터 계산기까지! 당신에게 필요한 모든 도구를 한곳에.">
     <!-- <meta property="og:image" content="https://Yangbam-lab.com/assets/og_main_hub.png"> -->
     <link rel="canonical" href="https://Yangbam-lab.com/index.html">
