--- a/calculator/diet_macro.html
+++ b/calculator/diet_macro.html
@@ -449,7 +449,7 @@
         };
 
         const macroRatios = {
-            cut: { c: 0.3, p: 0.5, f: 0.2, cal: -500 }, // Low Carb, High Protein
+            cut: { c: 0.4, p: 0.35, f: 0.25, cal: -500 }, // Adjusted: 40% C, 35% P, 25% F
             maintain: { c: 0.4, p: 0.3, f: 0.3, cal: 0 },
             bulk: { c: 0.5, p: 0.3, f: 0.2, cal: 300 }
         };
