--- a/calculator/index.html
+++ b/calculator/index.html
@@ -237,7 +237,10 @@
         </main>
 
         <footer>
-            &copy; Yangbam Lab. All rights reserved.
+            &copy; Yangbam Lab. All rights reserved.<br>
+            <a href="../policy.html"
+                style="color: #b2bec3; text-decoration: none; font-size: 0.8rem; margin-top: 5px; display: inline-block;">이용약관
+                및 개인정보처리방침</a>
         </footer>
     </div>
 </body>
