--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
             padding: 0;
             display: flex;
             justify-content: center;
+            align-items: center;
+            flex-direction: column;
             min-height: 100vh;
         }
 
@@ -192,6 +194,88 @@
                 및 개인정보처리방침</a>
         </footer>
     </div>
+    </div>
+
+    <!-- SEO Content -->
+    <article class="seo-footer"
+        style="padding: 4rem 1.5rem; background: #fff; border-top: 1px solid #eaeaea; color: #555; line-height: 1.8; text-align: left; margin: 3rem auto; font-family: 'Apple SD Gothic Neo', sans-serif; max-width: 600px; width: 100%; box-sizing: border-box;">
+
+        <h2
+            style="font-size: 2rem; margin-bottom: 2rem; text-align: center; color: #2d3436; font-weight: 900; word-break: keep-all;">
+            Yangbam Lab: 당신의 일상을 혁신하는<br>스마트 웹 플랫폼
+        </h2>
+
+        <p style="margin-bottom: 2rem; text-align: center; color: #636e72;">
+            "복잡한 건 싫고, 설치는 귀찮고, 내 정보는 소중하니까."<br>
+            <strong>Yangbam Lab</strong>은 현대인이 매일 마주하는 고민들을<br>
+            가장 심플하고 안전하게 해결하기 위해 탄생했습니다.
+        </p>
+
+        <hr style="border: 0; border-top: 1px solid #eee; margin: 3rem 0;">
+
+        <div style="margin-bottom: 3rem;">
+            <h3
+                style="font-size: 1.4rem; margin-bottom: 1rem; color: #0984e3; font-weight: bold; display: flex; align-items: center;">
+                <span
+                    style="background: #e3f2fd; padding: 5px 10px; border-radius: 8px; margin-right: 10px; font-size: 1.2rem;">🧠</span>
+                심리테스트 연구소
+            </h3>
+            <p style="margin-bottom: 1rem;">
+                나도 모르는 내 마음, 궁금하지 않으신가요? 단순한 흥미 위주의 테스트를 넘어 행동 심리학과 데이터 기반의 분석 알고리즘을 적용했습니다. 나의 성격, 연애 스타일, 직장 내 처세술 등을
+                객관적으로 파악하고, 친구들과 결과를 공유하며 즐거운 소통의 시간을 가져보세요.
+            </p>
+            <ul style="color: #636e72; font-size: 0.95rem;">
+                <li>꼰대력, 거지 DNA, 연애세포 생존 여부 등 12종+ 테스트</li>
+                <li>MBTI 대체 가능한 상황별 상세 리포트 제공</li>
+            </ul>
+        </div>
+
+        <div style="margin-bottom: 3rem;">
+            <h3
+                style="font-size: 1.4rem; margin-bottom: 1rem; color: #8e44ad; font-weight: bold; display: flex; align-items: center;">
+                <span
+                    style="background: #f3e5f5; padding: 5px 10px; border-radius: 8px; margin-right: 10px; font-size: 1.2rem;">🧮</span>
+                편리한 계산기
+            </h3>
+            <p style="margin-bottom: 1rem;">
+                생활 속 복잡한 계산, 검색창을 헤매지 마세요. 2026년 최신 세법과 금융 정책이 반영된 '살아있는 계산기'입니다. 연봉 실수령액부터 대출 이자, 다이어트 칼로리까지. 입력하는 즉시
+                당신에게 필요한 정답을 제시합니다.
+            </p>
+            <ul style="color: #636e72; font-size: 0.95rem;">
+                <li>급여/세금: 연봉 실수령액, 프리랜서, 육아휴직 급여</li>
+                <li>금융/생활: 대출 이자, 중개수수료, D-Day, 글자수 세기</li>
+            </ul>
+        </div>
+
+        <div style="margin-bottom: 3rem;">
+            <h3
+                style="font-size: 1.4rem; margin-bottom: 1rem; color: #009688; font-weight: bold; display: flex; align-items: center;">
+                <span
+                    style="background: #e0f2f1; padding: 5px 10px; border-radius: 8px; margin-right: 10px; font-size: 1.2rem;">💻</span>
+                IT 개발 도구
+            </h3>
+            <p style="margin-bottom: 1rem;">
+                개발자의 "귀차니즘"을 해결합니다. 포맷팅, 인코딩, 변환 등 매번 검색해서 다른 사이트를 찾아다니던 수고를 덜어드립니다. 모든 데이터는 서버로 전송되지 않고 브라우저 내에서만 처리되므로
+                보안 걱정 없이 안전하게 업무에 활용하세요.
+            </p>
+            <ul style="color: #636e72; font-size: 0.95rem;">
+                <li>데이터: JSON Formatter, CSV to SQL, Base64 Converter</li>
+                <li>유틸리티: QR Code 생성, WebP 변환, Markdown 에디터</li>
+            </ul>
+        </div>
+
+        <div
+            style="margin-top: 3rem; padding: 2rem; background-color: #2d3436; border-radius: 12px; color: white; text-align: center;">
+            <p style="margin: 0; font-size: 1.1rem; font-weight: bold; margin-bottom: 10px;">
+                "Simplicity is the ultimate sophistication."
+            </p>
+            <p style="margin: 0; font-size: 0.9rem; opacity: 0.8; font-weight: 300;">
+                Yangbam Lab은 사용자 경험(UX)을 최우선으로 생각합니다.<br>
+                광고로 도배된 화면, 불필요한 로딩, 복잡한 메뉴는 없습니다.<br>
+                오직 <strong>당신이 필요한 그 기능</strong>에만 집중합니다.
+            </p>
+        </div>
+    </article>
 </body>
 
 </html>
