--- a/calculator/diet_macro.html
+++ b/calculator/diet_macro.html
@@ -436,6 +436,80 @@
 
             <button class="btn-main" style="background-color:#999; margin-top:20px;" onclick="location.reload()">다시
                 계산하기</button>
+            <!-- SEO Content -->
+            <article
+                style="background-color: #F8FBEF; padding: 30px 20px; border-top: 1px solid #C8E6C9; margin-top: 30px;">
+                <h2 style="color: #388E3C; font-size: 1.3rem; margin-bottom: 20px;">[서론] 무작정 굶는 다이어트가 실패하는 이유</h2>
+                <p style="line-height: 1.6; color: #333333; margin-bottom: 20px;">
+                    "적게 먹으면 빠진다"는 것은 반은 맞고 반은 틀린 말입니다. 우리 몸은 생존을 위해 일정량의 에너지를 필수적으로 요구합니다. <strong>기초대사량(BMR)</strong>보다
+                    적게 섭취하면 몸은 이를 비상사태로 인식하여 지방을 축적하려는 '대사 적응' 상태가 됩니다. 결국 살이 잘 안 빠지는 체질로 변하고 <strong>요요 현상</strong>이 오게
+                    됩니다. 성공적인 다이어트를 위해서는 내 몸의 <strong>유지 칼로리(TDEE)</strong>를 정확히 알고, 전략적으로 섭취량을 조절해야 합니다.
+                </p>
+
+                <h2 style="color: #388E3C; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[본론 1] TDEE(총 에너지
+                    소비량)의 구성 요소</h2>
+                <p style="line-height: 1.6; color: #333333; margin-bottom: 15px;">
+                    <strong>TDEE 뜻</strong>은 Total Daily Energy Expenditure의 약자로, 하루 동안 내가 사용하는 총 칼로리를 의미합니다. 이는 크게 4가지로
+                    구성됩니다.
+                </p>
+                <ul style="line-height: 1.8; color: #333333; margin-bottom: 20px; padding-left: 20px;">
+                    <li style="margin-bottom: 10px;"><strong>BMR (기초대사량):</strong> 숨실 때, 잘 때 등 생명 유지에 필요한 최소 에너지. (전체의 약
+                        60~70%)</li>
+                    <li style="margin-bottom: 10px;"><strong>TEF (소화 대사량):</strong> 음식을 소화하고 흡수하는 과정에서 쓰는 에너지. (단백질이 가장
+                        높음)</li>
+                    <li style="margin-bottom: 10px;"><strong>NEAT (비운동성 활동):</strong> 걷기, 청소 등 운동 외의 활동 에너지.</li>
+                    <li><strong>EAT (운동 대사량):</strong> 헬스, 러닝 등 의도적인 운동으로 쓰는 에너지. 본 계산기에서는 <strong>미플린-세인트 지어
+                            공식</strong>과 활동 계수를 결합하여 가장 정확한 수치를 제공합니다.</li>
+                </ul>
+
+                <h2 style="color: #388E3C; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[본론 2] 황금 비율
+                    '매크로(Macro)' 설정법</h2>
+                <h3 style="color: #FF9800; font-size: 1.1rem; margin-bottom: 10px;">감량 (Cutting): 탄3 / 단5 / 지2</h3>
+                <p style="line-height: 1.6; color: #333333; margin-bottom: 20px;">
+                    체지방을 줄이려면 <strong>다이어트 식단 비율</strong>을 탄수화물 3: 단백질 5: 지방 2로 맞추는 것이 효과적입니다. 높은 단백질 섭취는 근손실을 방지하고 포만감을
+                    오래 유지시켜줍니다.
+                </p>
+                <h3 style="color: #FF9800; font-size: 1.1rem; margin-bottom: 10px;">증량 (Bulking): 탄5 / 단3 / 지2</h3>
+                <p style="line-height: 1.6; color: #333333; margin-bottom: 20px;">
+                    근육을 키우는 <strong>린매스업</strong> 시기에는 강도 높은 운동을 수행할 에너지가 필요하므로 탄수화물 비율을 높여야 합니다. 이때도 단백질은 체중 1kg당
+                    1.6~2.2g 이상 충분히 섭취해야 합니다.
+                </p>
+
+                <h2 style="color: #388E3C; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[정보] 건강한 식단 구성을 위한
+                    팁</h2>
+                <ul style="line-height: 1.8; color: #333333; margin-bottom: 20px; padding-left: 20px;">
+                    <li style="margin-bottom: 10px;"><strong>착한 탄수화물 고르기:</strong> 설탕, 밀가루 대신 현미, 고구마, 오트밀 등 GI 지수가 낮은
+                        복합 탄수화물을 선택하세요.</li>
+                    <li><strong>다양한 단백질원:</strong> "닭가슴살만 먹지 마세요." 계란, 생선, 두부, 소고기 우둔살 등 다양한 급원을 통해 미량 영양소까지 챙겨야 지속 가능한
+                        식단이 됩니다.</li>
+                </ul>
+
+                <h2 style="color: #388E3C; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[FAQ] 다이어트 궁금증 해결
+                </h2>
+                <ul style="line-height: 1.8; color: #333333; margin-bottom: 30px; padding-left: 20px;">
+                    <li style="margin-bottom: 15px;">
+                        <strong>Q. TDEE보다 얼마나 적게 먹어야 하나요?</strong><br>
+                        A. 일반적으로 TDEE에서 <strong>-500kcal</strong>를 덜 먹으면, 일주일에 약 0.5kg의 체지방 감량을 기대할 수 있습니다. 너무 급격한 감량은
+                        근손실을 유발하므로 주의하세요.
+                    </li>
+                    <li style="margin-bottom: 15px;">
+                        <strong>Q. 치팅데이는 얼마나 자주 해야 하나요?</strong><br>
+                        A. 식단 조절이 잘 되고 있다면 1~2주에 한 번, 평소 먹고 싶었던 음식을 '적당량' 먹는 것은 심리적 보상과 대사 저하 방지에 도움이 됩니다. 폭식은 금물입니다.
+                    </li>
+                    <li>
+                        <strong>Q. 인바디 기초대사량과 계산기 값이 왜 다른가요?</strong><br>
+                        A. 인바디는 체성분(근육량)을 직접 측정하여 계산하는 반면, 계산기는 평균적인 공식(키, 체중, 나이)을 사용하므로 차이가 있을 수 있습니다. 계산기 값은 가이드라인으로
+                        삼고, 체중 변화를 보며 섭취량을 조절하는 것이 가장 정확합니다.
+                    </li>
+                </ul>
+
+                <p
+                    style="color: #999999; font-size: 0.85rem; margin-top: 50px; border-top: 1px solid #C8E6C9; padding-top: 20px;">
+                    ※ 면책 조항: 본 결과는 통계적 공식(Mifflin-St Jeor)에 기반한 추정치이며, 개인의 대사량은 유전, 환경, 호르몬 등에 따라 달라질 수 있습니다. 본 내용은 전문
+                    의료인의 진단을 대체할 수 없으며, 질병이 있는 경우 의사와 상담하시기 바랍니다.
+                </p>
+            </article>
+
         </div>
 
     </div>
