--- a/calculator/index.html
+++ b/calculator/index.html
@@ -38,6 +38,8 @@
             padding: 0;
             display: flex;
             justify-content: center;
+            align-items: center;
+            flex-direction: column;
             min-height: 100vh;
         }
 
@@ -225,15 +227,35 @@
                 <div class="tool-desc">닭가슴살 몇 개 먹어야 할까? 내 몸에 딱 맞는 탄단지 황금비율 계산.</div>
             </a>
 
-            <!-- Calc Item 4: Dutch Pay (Coming Soon) -->
-            <div class="tool-card disabled-card">
+            <!-- Brokerage Fee Calculator -->
+            <a href="brokerage_fee.html" class="tool-card" style="border-left-color: #1565C0;">
                 <div class="tool-header">
-                    <span class="tool-title"><span class="badge" style="background:#eee; color:#777;">OPEN SOON</span>N빵
-                        더치페이 계산기</span>
-                    <span class="tool-icon">🍣</span>
+                    <span class="tool-title"><span class="badge" style="background:#E3F2FD; color:#1565C0;">REAL
+                            ESTATE</span>부동산 중개수수료</span>
+                    <span class="tool-icon">🏠</span>
                 </div>
-                <div class="tool-desc">10원 단위 절사? 술 안 마신 사람 제외? 복잡한 정산을 한방에.</div>
-            </div>
+                <div class="tool-desc">이사 전 필수 체크! 매매/전세/월세 복비 계산 및 월세 환산액 확인.</div>
+            </a>
+
+            <!-- D-Day & Business Day Calculator -->
+            <a href="d_day_calc.html" class="tool-card" style="border-left-color: #FF6B6B;">
+                <div class="tool-header">
+                    <span class="tool-title"><span class="badge"
+                            style="background:#ffebee; color:#d32f2f;">DATE</span>D-Day & 영업일 계산</span>
+                    <span class="tool-icon">📅</span>
+                </div>
+                <div class="tool-desc">오늘부터 100일은? 주말/공휴일 제외한 마감일 계산까지 한 번에.</div>
+            </a>
+
+            <!-- 8. Character Counter -->
+            <a href="char_counter.html" class="tool-card">
+                <div class="tool-header">
+                    <span class="tool-title"><span class="badge"
+                            style="background:#ECEFF1; color:#607D8B;">DOCS</span>글자수 세기 & 바이트</span>
+                    <span class="tool-icon">📝</span>
+                </div>
+                <div class="tool-desc">공백 포함/제외 및 바이트 계산. 자소서, 이력서, 블로그용 필수 툴.</div>
+            </a>
         </main>
 
         <footer>
@@ -243,6 +265,105 @@
                 및 개인정보처리방침</a>
         </footer>
     </div>
+    </div>
+
+    <!-- SEO Content -->
+    <article class="seo-footer"
+        style="padding: 3rem 1.5rem; background: #fdfdfd; border-top: 1px solid #eaeaea; color: #555; line-height: 1.8; text-align: left; margin: 2rem auto; font-family: 'Apple SD Gothic Neo', sans-serif; max-width: 600px; width: 100%; box-sizing: border-box;">
+
+        <h2
+            style="font-size: 1.8rem; margin-bottom: 2rem; text-align: center; color: #8e44ad; font-weight: 800; word-break: keep-all;">
+            [생활 백서] 숫자로 보는 인생의 모든 해답, 편리한 계산기
+        </h2>
+
+        <p style="margin-bottom: 1.5rem;">
+            살다 보면 숫자가 필요한 순간이 반드시 찾아옵니다. 연봉 협상 테이블에서 내 통장에 들어올 진짜 액수가 궁금할 때, 주택 담보 대출 금리를 따져볼 때, 혹은 다이어트를 위해 칼로리를 계산할 때.
+            <strong>편리한 계산기 연구소</strong>는 복잡한 금융/생활 공식을 누구나 쉽게 사용할 수 있도록 자동화한 <strong>생활 밀착형 계산 플랫폼</strong>입니다. 세법이 바뀔
+            때마다 업데이트되는 최신 로직을 반영하여, 여러분의 현명한 의사결정을 지원합니다. 두드리지 말고, 입력만 하세요. 정답은 저희가 알려드립니다.
+        </p>
+
+        <h3
+            style="font-size: 1.4rem; margin-top: 2.5rem; margin-bottom: 1.2rem; color: #0056b3; font-weight: bold; border-bottom: 2px solid #0056b3; padding-bottom: 10px;">
+            1. 텅장 탈출을 위한 '금융/재테크'
+        </h3>
+        <p style="margin-bottom: 1rem;">
+            "월급은 스쳐 지나갈 뿐"이라는 말이 있죠. 하지만 내 돈이 어디로 도망가는지는 알아야 잡을 수 있습니다. 세금(소득세, 4대보험)과 대출 이자를 정확히 파악하는 것이 재테크의 시작입니다.
+        </p>
+        <ul style="list-style-type: disc; padding-left: 1.2rem; margin-bottom: 1.5rem; color: #444;">
+            <li style="margin-bottom: 10px;">
+                <strong><a href="salary_2026.html"
+                        style="text-decoration: none; color: #0056b3; font-weight: bold;">2026 연봉 실수령액 계산기</a></strong>:
+                연봉 1억이면 실제로 얼마를 받을까요? 최신 과세 표준 요율을 반영하여 연봉별 월 예상 실수령액을 1초 만에 보여드립니다. 연봉 협상이나 이직 시 희망 연봉을 제시하는 기준이
+                되어드립니다.
+            </li>
+            <li style="margin-bottom: 10px;">
+                <strong><a href="loan_interest.html"
+                        style="text-decoration: none; color: #1565C0; font-weight: bold;">대출 이자 & DSR 계산기</a></strong>:
+                원리금균등, 원금균등, 만기일시상환? 갚는 방식에 따라 총 이자가 수천만 원 차이가 날 수 있습니다. 월 납입금과 총이자액, 그리고 대출 한도를 결정하는 DSR(총부채원리금상환비율)까지
+                꼼꼼하게 따져보세요.
+            </li>
+            <li style="margin-bottom: 10px;">
+                <strong><a href="freelancer_calculator.html"
+                        style="text-decoration: none; color: #2c3e50; font-weight: bold;">프리랜서 & 알바 계산기</a></strong>:
+                3.3% 세금을 뗄 때와 받을 때의 차이를 아시나요? 프리랜서 용역비 계산부터 알바 주휴수당, 그리고 부가세(VAT) 별도/포함 계산까지. 사장님도, 알바생도 억울한 일 없도록 정확하게
+                계산해드립니다.
+            </li>
+            <li style="margin-bottom: 10px;">
+                <strong><a href="brokerage_fee.html"
+                        style="text-decoration: none; color: #1565C0; font-weight: bold;">부동산 중개수수료 계산기</a></strong>:
+                매매, 전세, 월세 계약 시 공인중개사에게 줘야 할 법정 수수료는? 바가지 요금 걱정 없이 상한요율을 확인하고, 현명하게 협의하세요.
+            </li>
+        </ul>
+
+        <h3
+            style="font-size: 1.4rem; margin-top: 2.5rem; margin-bottom: 1.2rem; color: #4CAF50; font-weight: bold; border-bottom: 2px solid #4CAF50; padding-bottom: 10px;">
+            2. 건강과 워라벨을 위한 '라이프스타일'
+        </h3>
+        <p style="margin-bottom: 1rem;">
+            돈만큼 중요한 것이 바로 건강과 시간입니다. 내 몸을 관리하고, 소중한 휴가를 계획하는 일에도 숫자가 필요합니다.
+        </p>
+        <ul style="list-style-type: disc; padding-left: 1.2rem; margin-bottom: 1.5rem; color: #444;">
+            <li style="margin-bottom: 10px;">
+                <strong><a href="diet_macro.html" style="text-decoration: none; color: #388e3c; font-weight: bold;">다이어트
+                        & TDEE 계산기</a></strong>: 무작정 굶는 다이어트는 이제 그만. 당신의 기초대사량(BMR)과 활동 대사량(TDEE)을 기반으로 하루 적정 칼로리와 탄/단/지
+                비율을 처방해드립니다. 먹으면서 빼는 과학적인 식단을 설계해보세요.
+            </li>
+            <li style="margin-bottom: 10px;">
+                <strong><a href="parenting_style.html"
+                        style="text-decoration: none; color: #eba3a3; font-weight: bold;">육아휴직 & 단축근무 급여</a></strong>:
+                아이와 함께하는 소중한 시간, 국가는 얼마를 지원해줄까요? 통상임금을 기준으로 육아휴직 급여와 육아기 근로시간 단축 급여 모의 계산을 지원합니다. 워킹맘, 워킹대디의 든든한 육아 설계를
+                돕습니다.
+            </li>
+            <li style="margin-bottom: 10px;">
+                <strong><a href="d_day_calc.html"
+                        style="text-decoration: none; color: #E53935; font-weight: bold;">D-Day & 영업일 계산기</a></strong>:
+                연인과의 100일 기념일부터 수능 D-Day, 프로젝트 마감일까지. 주말과 공휴일을 제외한 영업일(Working Day) 계산 기능으로 업무 일정을 빈틈없이 관리하세요.
+            </li>
+        </ul>
+
+        <h3
+            style="font-size: 1.4rem; margin-top: 2.5rem; margin-bottom: 1.2rem; color: #607D8B; font-weight: bold; border-bottom: 2px solid #607D8B; padding-bottom: 10px;">
+            3. 문서 작업 필살기
+        </h3>
+        <ul style="list-style-type: disc; padding-left: 1.2rem; margin-bottom: 1.5rem; color: #444;">
+            <li style="margin-bottom: 10px;">
+                <strong><a href="char_counter.html"
+                        style="text-decoration: none; color: #607D8B; font-weight: bold;">글자수 & 바이트 계산기</a></strong>:
+                자소서 1000자, SMS 80바이트 제한. 글자 수 세기는 기본, 줄바꿈과 공백 처리에 따른 세밀한 바이트 계산까지 지원합니다. 합격을 부르는 자기소개서의 마침표를 여기서 찍으세요.
+            </li>
+        </ul>
+
+        <div
+            style="margin-top: 3rem; padding: 2rem; background-color: #f0f4c3; border-radius: 12px; border: 1px solid #dce775;">
+            <p style="margin: 0; font-size: 0.95rem; color: #558b2f; text-align: center;">
+                <strong>[Disclaimer]</strong><br><br>
+                본 연구소의 모든 계산기는 최신 법령과 통상적인 금융 공식을 준수합니다.<br>
+                단, 개인의 특수한 상황이나 금융사의 약관에 따라 <strong>실제 결과와 미세한 차이</strong>가 발생할 수 있습니다.<br>
+                중요한 재무적 결정 전에는 반드시 해당 기관(국세청, 은행 등)에 최종 확인하시기 바랍니다.<br><br>
+                여러분의 부자 되는 길을 응원합니다! 💰
+            </p>
+        </div>
+    </article>
 </body>
 
 </html>
