--- a/calculator/loan_interest.html
+++ b/calculator/loan_interest.html
@@ -468,6 +468,75 @@
             <button class="btn-main" onclick="location.reload()" style="background-color:#999;">다시 계산하기</button>
         </div>
 
+        <!-- SEO Content -->
+        <article
+            style="background-color: #f8f9fa; padding: 30px 20px; border-top: 1px solid #dee2e6; margin-top: 30px;">
+            <h2 style="color: #1565C0; font-size: 1.3rem; margin-bottom: 20px;">[서론] 대출 계산기, 왜 반드시 미리 돌려봐야 할까?</h2>
+            <p style="line-height: 1.6; color: #444; margin-bottom: 20px;">
+                대출을 받을 때 금리 <strong>0.1%의 차이</strong>가 30년 동안 쌓이면 수백만 원, 많게는 수천만 원의 이자 차이를 만들어냅니다. 단순히 "은행에서 알아서 해주겠지"라고
+                생각하다가는 감당하기 힘든 <strong>총 이자 폭탄</strong>을 맞을 수 있습니다. 또한, 내 연봉으로 얼마까지 빌릴 수 있는지 <strong>본인의 상환
+                    능력(DSR)</strong>을 미리 파악하지 않으면, 잔금 날 대출이 거절되는 낭패를 볼 수도 있습니다. 본 계산기는 복잡한 은행 공식을 그대로 적용하여, 여러분의 안전한 자금
+                계획을 도와드립니다.
+            </p>
+
+            <h2 style="color: #1565C0; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[본론 1] 헷갈리는 3가지 상환 방식
+                완벽 정리</h2>
+            <p style="line-height: 1.6; color: #444; margin-bottom: 15px;">
+                나에게 딱 맞는 상환 방식을 선택하는 것이 이자 절약의 첫걸음입니다.
+            </p>
+            <ul style="line-height: 1.8; color: #444; margin-bottom: 20px; padding-left: 20px;">
+                <li style="margin-bottom: 10px;"><strong>원리금균등상환:</strong> 매달 내는 돈(원금+이자)이 똑같아 자금 계획을 세우기 좋습니다. 주택담보대출
+                    이용자의 80% 이상이 선택하는 가장 대중적인 방식입니다.</li>
+                <li style="margin-bottom: 10px;"><strong>원금균등상환:</strong> 초기에는 갚아야 할 돈이 많지만, 갈수록 이자가 줄어들어 <strong>총 이자가
+                        가장 저렴</strong>합니다. 여유 자금이 있거나 은퇴 전 빠르게 빚을 줄이려는 분들께 추천합니다.</li>
+                <li><strong>만기일시상환:</strong> 매달 이자만 내다가 만기에 원금을 한 번에 갚습니다. 당장 부담은 적지만 총 이자가 가장 비싸고, 만기 시 큰 목돈이 필요해
+                    전세자금대출 외에는 잘 쓰이지 않습니다.</li>
+            </ul>
+
+            <h2 style="color: #1565C0; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[핵심] 2026년
+                DSR(총부채원리금상환비율) 규제 가이드</h2>
+            <h3 style="color: #333; font-size: 1.1rem; margin-bottom: 10px;">내 대출 한도의 키(Key), DSR이란?</h3>
+            <p style="line-height: 1.6; color: #444; margin-bottom: 20px;">
+                <strong>총부채원리금상환비율(DSR)</strong>은 연 소득 대비 연간 갚아야 할 모든 대출 원리금의 비율을 뜻합니다. (공식: 연간 총 원리금 상환액 / 연소득). 현재
+                1금융권은 DSR 40% 규제를 적용받습니다. 즉, 연봉 5천만 원인 사람은 1년에 갚는 원리금 합계가 2천만 원을 넘길 수 없습니다.
+            </p>
+            <h3 style="color: #333; font-size: 1.1rem; margin-bottom: 10px;">더 강력해진 '스트레스 DSR'</h3>
+            <p style="line-height: 1.6; color: #444; margin-bottom: 20px;">
+                <strong>2026년 스트레스 DSR 적용</strong>이 본격화되면서, 대출 한도는 더욱 줄어들 전망입니다. 이는 미래 금리 인상 위험을 미리 반영하여 가산 금리를 더해 한도를
+                계산하는 제도로, 변동금리 대출자에게 더 불리하게 작용합니다. 따라서 <strong>주택담보대출 LTV DTI</strong>뿐만 아니라 스트레스 DSR까지 꼼꼼히 체크해야 합니다.
+            </p>
+
+            <h2 style="color: #1565C0; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[팁] 슬기로운 대출 관리 노하우
+            </h2>
+            <ul style="line-height: 1.8; color: #444; margin-bottom: 20px; padding-left: 20px;">
+                <li style="margin-bottom: 10px;"><strong>금리 인하 요구권 활용:</strong> 승진, 연봉 인상, 신용점수 상승 등 재무 상태가 좋아졌다면, 은행에
+                    당당하게 금리를 깎아달라고 요구할 수 있습니다. (법적 권리)</li>
+                <li style="margin-bottom: 10px;"><strong>중도상환수수료 체크:</strong> 대출을 받은 지 3년이 지났다면
+                    <strong>중도상환수수료</strong>가 면제됩니다. 이 시점에 더 낮은 금리의 상품으로 <strong>대출 갈아타기</strong>를 시도하는 것이 유리합니다.</li>
+                <li><strong>고정 vs 변동 선택:</strong> 금리 인상기에는 고정금리가, 인하기에는 변동금리가 유리할 수 있으나, 장기 주담대는 안정적인 고정금리(혼합형)가 선호됩니다.
+                </li>
+            </ul>
+
+            <h2 style="color: #1565C0; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[FAQ] 자주 묻는 질문</h2>
+            <ul style="line-height: 1.8; color: #444; margin-bottom: 30px; padding-left: 20px;">
+                <li style="margin-bottom: 15px;">
+                    <strong>Q. 마이너스 통장도 DSR에 포함되나요?</strong><br>
+                    A. 네, 포함됩니다. 마이너스 통장은 실제 사용 금액이 아닌 '한도 금액' 전체를 기준으로, 보통 5년 만기 분할상환으로 간주하여 DSR을 계산하므로 한도를 크게 잡아먹습니다.
+                </li>
+                <li>
+                    <strong>Q. 신용대출과 주담대 순서는 어떻게 해야 유리한가요?</strong><br>
+                    A. 일반적으로 <strong>주택담보대출</strong>을 먼저 받고 부족한 자금을 신용대출로 채우는 것이 유리합니다. 신용대출을 먼저 받으면 DSR이 급격히 올라가 주담대
+                    한도가 대폭 축소될 수 있습니다.
+                </li>
+            </ul>
+
+            <p
+                style="color: #868e96; font-size: 0.85rem; margin-top: 50px; border-top: 1px solid #dee2e6; padding-top: 20px;">
+                ※ 면책 조항: 본 계산 결과는 입력해주신 수치를 바탕으로 한 추정치이며, 실제 대출 가능 여부와 최종 금리는 개인의 신용도 및 각 금융사의 심사 기준에 따라 달라질 수 있습니다. 정확한
+                내용은 해당 금융사에 문의하시기 바랍니다.
+            </p>
+        </article>
+
     </div>
 
     <script>
