--- a/calculator/parental_leave.html
+++ b/calculator/parental_leave.html
@@ -432,6 +432,75 @@
                 계산하기</button>
         </div>
 
+        <!-- SEO Content -->
+        <article
+            style="background-color: #fffaf0; padding: 30px 20px; border-top: 1px solid #f2e0d5; margin-top: 30px;">
+            <h2 style="color: #eba3a3; font-size: 1.3rem; margin-bottom: 20px;">[서론] 육아휴직, 숨은 돈까지 챙기는 법</h2>
+            <p style="line-height: 1.6; color: #5d4037; margin-bottom: 20px;">
+                "아이를 봐줄 사람이 없어서" 혹은 "생활비 걱정 때문에" 육아휴직을 망설이시나요? 정부는 2026년을 맞아 저출산 극복을 위해 파격적인 지원책을 내놓았습니다. 핵심은
+                <strong>통상임금 100%</strong>를 지원하는 기간과 상한액이 대폭 늘어났다는 점입니다. 이제 육아휴직은 단순한 '쉼'이 아니라, 아이와 부모 모두를 위한 필수적인 권리이자
+                혜택입니다. 바뀐 정책을 꼼꼼히 챙겨서, 놓치고 있던 숨은 지원금까지 모두 받아가세요.
+            </p>
+
+            <h2 style="color: #eba3a3; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[본론 1] 6+6 부모육아휴직제 완벽
+                가이드</h2>
+            <p style="line-height: 1.6; color: #5d4037; margin-bottom: 15px;">
+                기존 '3+3' 제도가 <strong>6+6 부모육아휴직제</strong>로 확대 개편되었습니다. 생후 18개월 내의 자녀를 둔 부모가 동시 또는 순차적으로 육아휴직을 사용할 경우,
+                <strong>첫 6개월 동안</strong> 부모 각각에게 통상임금의 100%를 지급합니다.
+            </p>
+            <ul style="line-height: 1.8; color: #5d4037; margin-bottom: 20px; padding-left: 20px;">
+                <li style="margin-bottom: 10px;"><strong>지원 상한액 확대:</strong> 사용 기간에 따라 상한액이 매달 인상됩니다. (1개월 200만 원 ~ 6개월
+                    450만 원). 부부 합산 최대 3,900만 원까지 받을 수 있는 강력한 혜택입니다.</li>
+                <li><strong>아빠 육아휴직 보너스:</strong> 아빠의 육아 참여를 독려하기 위해, 두 번째 육아휴직자(주로 아빠)에게도 동일한 상한액 혜택을 100% 적용합니다.</li>
+            </ul>
+
+            <h2 style="color: #eba3a3; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[본론 2] 육아기 근로시간 단축 제도
+                활용법</h2>
+            <h3 style="color: #d68787; font-size: 1.1rem; margin-bottom: 10px;">휴직 대신 단축근무, 급여는?</h3>
+            <p style="line-height: 1.6; color: #5d4037; margin-bottom: 20px;">
+                경력 단절이 걱정된다면 풀타임 휴직 대신 <strong>육아기 근로시간 단축 급여</strong>를 활용하세요. 주 15~35시간으로 근무를 줄일 수 있으며, 줄어든 급여의 일부를 정부가
+                <strong>고용보험</strong> 기금에서 지원해줍니다.
+            </p>
+            <h3 style="color: #d68787; font-size: 1.1rem; margin-bottom: 10px;">주 10시간 단축 지원금 (통상임금 100%)</h3>
+            <p style="line-height: 1.6; color: #5d4037; margin-bottom: 20px;">
+                특히 주목할 점은, 최초 주 10시간 단축분(주 40시간 -> 30시간)에 대해서는 <strong>통상임금 100%</strong>(상한액 200만 원) 기준으로 지원금을 산정한다는
+                것입니다. 나머지 단축분은 통상임금 80% 기준으로 지급됩니다. 즉, 하루 2시간 일찍 퇴근해도 월급 손실을 최소화할 수 있습니다.
+            </p>
+
+            <h2 style="color: #eba3a3; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[정보] 신청 방법 및 필요 서류
+            </h2>
+            <p style="line-height: 1.6; color: #5d4037; margin-bottom: 15px;">
+                육아휴직 및 단축근무 급여는 <strong>고용24(구 고용보험)</strong> 웹사이트나 모바일 앱에서 간편하게 신청할 수 있습니다.
+            </p>
+            <ul style="line-height: 1.8; color: #5d4037; margin-bottom: 20px; padding-left: 20px;">
+                <li style="margin-bottom: 10px;"><strong>사업주 준비 서류:</strong> 육아휴직(육아기 근로시간 단축) 확인서 1부, 통상임금을 확인할 수 있는
+                    증명자료(임금대장, 근로계약서 등) 사본 1부.</li>
+                <li><strong>신청 시기:</strong> 휴직 시작 1개월 후부터 종료 12개월 이내에 매월 또는 일괄 신청 가능합니다.</li>
+            </ul>
+
+            <h2 style="color: #eba3a3; font-size: 1.3rem; margin-top: 40px; margin-bottom: 20px;">[FAQ] 자주 묻는 질문</h2>
+            <ul style="line-height: 1.8; color: #5d4037; margin-bottom: 30px; padding-left: 20px;">
+                <li style="margin-bottom: 15px;">
+                    <strong>Q. 사업주가 거부하면 어떻게 하나요?</strong><br>
+                    A. 고용보험 가입 기간이 180일 이상인 근로자가 신청하면 사업주는 의무적으로 허용해야 합니다. 정당한 사유 없이 거부할 경우 사업주에게 500만 원 이하의 과태료가 부과됩니다.
+                </li>
+                <li style="margin-bottom: 15px;">
+                    <strong>Q. 육아휴직 기간도 퇴직금 산정 기간에 포함되나요?</strong><br>
+                    A. 네, 포함됩니다. 육아휴직 기간은 근속 기간으로 인정되므로, 퇴직금 산정 시 불이익을 받지 않습니다.
+                </li>
+                <li>
+                    <strong>Q. 출산휴가와 육아휴직을 이어 쓸 수 있나요?</strong><br>
+                    A. 가능합니다. 출산전후휴가(90일) 종료 후 바로 이어서 육아휴직을 신청하여 연속으로 사용할 수 있으며, 이 경우 급여 신청도 각각 진행해야 합니다.
+                </li>
+            </ul>
+
+            <p
+                style="color: #a1887f; font-size: 0.85rem; margin-top: 50px; border-top: 1px solid #f2e0d5; padding-top: 20px;">
+                ※ 면책 조항: 본 계산 결과는 입력된 정보를 바탕으로 한 모의 계산이며, 정확한 <strong>2026년 육아휴직 급여 상한액</strong> 적용 및 실제 수령액은 고용센터의 심사를
+                통해 최종 결정됩니다. 개별 상황에 따라 사후지급금 공제 여부 등이 달라질 수 있습니다.
+            </p>
+        </article>
+
     </div>
 
     <script>
