--- a/calculator/salary_2026.html
+++ b/calculator/salary_2026.html
@@ -429,6 +429,69 @@
             <!-- Ad: Bottom -->
 
         </div>
+
+        <article
+            style="background-color: #f8f9fa; padding: 30px 20px; border-top: 1px solid #dee2e6; margin-top: 30px;">
+            <h2 style="color: #0056b3; font-size: 24px; margin-bottom: 20px;">[서론] 왜 내 월급은 계약 연봉과 다를까?</h2>
+            <p style="line-height: 1.6; margin-bottom: 20px;">
+                많은 직장인들이 첫 월급을 받고 당황하곤 합니다. 계약서에 적힌 <strong>세전 연봉(Gross)</strong>과 통장에 실제 입금되는 <strong>세후
+                    실수령액(Net)</strong>에 큰 차이가 있기 때문입니다. 이는 대한민국 근로자라면 누구나 납부해야 하는 '원천징수' 제도 때문입니다. 회사는 급여를 지급하기 전에 미리
+                세금(소득세, 지방소득세)과 <strong>4대보험</strong>료를 떼어 국가에 대신 납부합니다. 따라서 나의 진짜 구매력을 알기 위해서는 단순히 연봉 액수가 아닌, 공제 내역을
+                정확히 반영한 실수령액을 파악하는 것이 필수적입니다.
+            </p>
+
+            <h2 style="color: #0056b3; font-size: 24px; margin-top: 40px; margin-bottom: 20px;">[핵심 1] 2026년 적용되는 4대보험
+                공제 항목 완전 정복</h2>
+            <p style="line-height: 1.6; margin-bottom: 15px;">
+                급여 명세서에서 가장 큰 비중을 차지하는 것은 단연 4대보험입니다. <strong>2026년 4대보험 요율</strong>은 다음과 같이 적용됩니다.
+            </p>
+            <ul style="line-height: 1.8; margin-bottom: 20px;">
+                <li><strong>국민연금:</strong> 월 소득의 9% 중 근로자가 4.5%를 부담합니다. 다만, 소득이 아무리 높아도 <strong>국민연금
+                        상한액</strong>(2025~2026년 기준 월 617만 원 이상 소득자)이 적용되어 일정 금액 이상은 공제되지 않습니다.</li>
+                <li><strong>건강보험 & 장기요양보험:</strong> 2026년에는 <strong>건강보험료 인상</strong> 요인이 반영되어 약 3.595%(근로자 부담) 수준이 적용될
+                    것으로 예상됩니다. 여기에 건강보험료의 약 13.14%가 장기요양보험료로 추가 부과됩니다.</li>
+                <li><strong>고용보험:</strong> 실직 시 실업급여 수급을 위해 월 급여의 0.9%를 공제합니다.</li>
+            </ul>
+
+            <h2 style="color: #0056b3; font-size: 24px; margin-top: 40px; margin-bottom: 20px;">[핵심 2] 소득세와 지방소득세 계산법
+            </h2>
+            <p style="line-height: 1.6; margin-bottom: 20px;">
+                4대보험을 제외한 나머지는 국세(소득세)와 지방세입니다. 이는 국세청에서 제공하는 <strong>근로소득 간이세액표</strong>에 따라 급여 구간별로 차등 부과됩니다. 중요한 점은
+                부양가족 수에 따라 세금이 크게 달라진다는 것입니다. 본인을 포함한 부양가족이 많을수록, 특히 20세 이하 자녀가 있다면 공제 혜택이 늘어나 납부할 세금이 줄어듭니다. 본
+                <strong>연봉 실수령액표</strong> 계산기에서도 부양가족 수 입력에 따라 실수령액이 달라지는 것을 확인할 수 있습니다.
+            </p>
+
+            <h2 style="color: #0056b3; font-size: 24px; margin-top: 40px; margin-bottom: 20px;">[정보] 2026년 최저임금과 비과세 혜택
+            </h2>
+            <h3 style="color: #333; font-size: 18px; margin-bottom: 15px;">2026년 최저임금과 세전 세후 차이</h3>
+            <p style="line-height: 1.6; margin-bottom: 20px;">
+                <strong>2026년 최저임금</strong>은 물가 상승률을 반영하여 결정되며, 이를 월급으로 환산(주 40시간 + 주휴수당 포함 209시간 기준)하면 월 200만 원 중반대가
+                됩니다. 연봉으로 따지면 약 3,000만 원 초반 수준이나, <strong>세전 세후 차이</strong>를 고려하면 실수령액은 이보다 적습니다.
+            </p>
+            <h3 style="color: #333; font-size: 18px; margin-bottom: 15px;">숨은 월급 찾기, 비과세 식대</h3>
+            <p style="line-height: 1.6; margin-bottom: 20px;">
+                세금을 아끼는 가장 좋은 방법은 <strong>비과세 식대</strong> 항목을 활용하는 것입니다. 현재 월 20만 원까지 식대는 비과세 처리되어 세금 및 4대보험 부과 대상에서
+                제외됩니다. 즉, 연봉이 같아도 비과세 수당 비중이 높으면 <strong>실수령액</strong>이 더 늘어납니다. 특히 <strong>연봉 1억 실수령액</strong> 구간처럼
+                고소득자일수록 비과세 항목의 절세 효과는 중요해집니다.
+            </p>
+
+            <h2 style="color: #0056b3; font-size: 24px; margin-top: 40px; margin-bottom: 20px;">[FAQ] 연봉 계산기 자주 묻는 질문
+            </h2>
+            <ul style="line-height: 1.8; margin-bottom: 30px;">
+                <li style="margin-bottom: 10px;"><strong>Q. 성과급이나 상여금은 포함인가요?</strong><br>A. 일반적으로 연봉 계약서상 금액은 '고정 급여'
+                    기준입니다. 변동 성과급은 별도 과세되므로 합산하여 계산하면 오차가 발생할 수 있습니다.</li>
+                <li style="margin-bottom: 10px;"><strong>Q. 수습 기간에는 어떻게 계산하나요?</strong><br>A. 수습 기간 3개월 동안 최저임금의 90%만
+                    지급받는 경우, 입력 연봉의 90% 금액으로 조회하셔야 정확합니다. (단, 1년 미만 계약 등 예외 존재)</li>
+                <li><strong>Q. 중소기업 청년 소득세 감면은 뭔가요?</strong><br>A. 중소기업에 취업한 만 15~34세 청년은 소득세의 90%(최대 200만 원)를 감면받을 수
+                    있습니다. 본 계산기는 일반 과세 기준이므로, 실제 수령액은 더 많을 수 있습니다.</li>
+            </ul>
+
+            <p
+                style="color: #868e96; font-size: 0.9em; margin-top: 50px; border-top: 1px solid #dee2e6; padding-top: 20px;">
+                ※ 면책 조항: 본 계산 결과는 2026년 예상 세율을 기반으로 한 <strong>모의 계산</strong>이며, 실제 급여명세서와는 10원 단위의 차이가 있을 수 있습니다. 정확한
+                금액은 사내 급여 담당자에게 문의하시기 바랍니다.
+            </p>
+        </article>
     </div>
 
     <script>
